Remove ShadowVariableType