@@ -1,14 +1,10 @@
 package ai.timefold.solver.core.impl.domain.variable;
 
-import static ai.timefold.solver.core.impl.domain.variable.ShadowVariableType.BASIC;
-import static ai.timefold.solver.core.impl.domain.variable.ShadowVariableType.CASCADING_UPDATE;
-import static ai.timefold.solver.core.impl.domain.variable.ShadowVariableType.DECLARATIVE;
 import static ai.timefold.solver.core.impl.score.constraint.ConstraintMatchPolicy.DISABLED;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.EnumSet;
 import java.util.IdentityHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -51,24 +47,8 @@ import org.jspecify.annotations.Nullable;
 @NullMarked
 public final class ShadowVariableUpdateHelper<Solution_> {
 
-    private static final EnumSet<ShadowVariableType> SUPPORTED_TYPES =
-            EnumSet.of(BASIC, CASCADING_UPDATE, DECLARATIVE);
-
     public static <Solution_> ShadowVariableUpdateHelper<Solution_> create() {
-        return new ShadowVariableUpdateHelper<>(SUPPORTED_TYPES);
-    }
-
-    // Testing purposes
-    static <Solution_> ShadowVariableUpdateHelper<Solution_> create(ShadowVariableType... supportedTypes) {
-        var typesSet = EnumSet.noneOf(ShadowVariableType.class);
-        typesSet.addAll(Arrays.asList(supportedTypes));
-        return new ShadowVariableUpdateHelper<>(typesSet);
-    }
-
-    private final EnumSet<ShadowVariableType> supportedShadowVariableTypes;
-
-    private ShadowVariableUpdateHelper(EnumSet<ShadowVariableType> supportedShadowVariableTypes) {
-        this.supportedShadowVariableTypes = supportedShadowVariableTypes;
+        return new ShadowVariableUpdateHelper<>();
     }
 
     @SuppressWarnings("unchecked")
@@ -92,16 +72,6 @@ public final class ShadowVariableUpdateHelper<Solution_> {
         var solutionDescriptor =
                 SolutionDescriptor.buildSolutionDescriptor(Objects.requireNonNull(solutionClass),
                         entityClassList.toArray(new Class<?>[0]));
-        var shadowVariableSupport =
-                ShadowVariableSupport.create(new InternalScoreDirector.Builder<>(solutionDescriptor).build());
-        var missingShadowVariableTypeList = shadowVariableSupport.getSupportedShadowVariableTypes().stream()
-                .filter(type -> !supportedShadowVariableTypes.contains(type))
-                .toList();
-        if (!missingShadowVariableTypeList.isEmpty()) {
-            throw new IllegalStateException(
-                    "Impossible state: The following shadow variable types are not currently supported (%s)."
-                            .formatted(missingShadowVariableTypeList));
-        }
         // No solution, we trigger all supported events manually
         var session = InternalShadowVariableSession.build(solutionDescriptor, entities);
         // Update all built-in shadow variables
@@ -189,7 +159,7 @@ public final class ShadowVariableUpdateHelper<Solution_> {
                 if (values.isEmpty()) {
                     continue;
                 }
-                var entityType = values.get(0).getClass();
+                var entityType = values.getFirst().getClass();
                 for (var i = 0; i < values.size(); i++) {
                     var shadowEntity = values.get(i);
                     // Inverse relation
